--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "ember-cli-shims": "0.1.0",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "firebase": "^2.1.0"
+    "firebase": "^2.1.0",
+    "hammerjs": "^2.0.6",
+    "matchMedia": "0.2.0"
   }
 }
