--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-moment-shim": "1.0.0",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.3.0",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
@@ -38,6 +39,7 @@
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
     "ember-moment": "6.0.0",
+    "ember-paper": "0.2.11",
     "ember-resolver": "^2.0.3",
     "emberfire": "1.6.5",
     "loader.js": "^4.0.0",
